# webclip

./: .editorconfig  .env.example  .gitattributes  .gitignore  BACKLOG.MD  Makefile  README.md  justfile  pyproject.toml
.helix/: languages.toml
src/webclip/: cli.py  config.py  exceptions.py  logging.py  models.py  service.py
src/webclip/adapters/: __init__.py  base.py  generic.py  vas3k.py
src/webclip/assets/: __init__.py  downloader.py
src/webclip/fetchers/: base.py  http.py  playwright.py
src/webclip/outputs/: __init__.py  filesystem.py  obsidian.py
src/webclip/renderers/: html_renderer.py  markdown.py  pdf_renderer.py
tests/: test_asset_pipeline.py  test_cli.py  test_config.py  test_generic_adapter.py  test_registry.py  test_renderers_and_output.py  test_service_update.py  test_vas3k_adapter.py
webclip/: __main__.py  auth.py  cli.py  config.py  diagnostics.py  registry.py  service.py
webclip/adapters/: declarative.py
webclip/outputs/: filesystem.py
webclip/renderers/: __init__.py  html_renderer.py  json_renderer.py  markdown.py
